Changes in import statements and necessary access modifiers added.
Signed-off-by: Chetan <chetankumar.h.239@gmail.com>